@@ -12,6 +12,9 @@ Changes since 2.0.7
        i = where (foo); 
        j = where (not foo);
 
+3. src/slexcept.c: SLerr_throw added to allow applications to mimic
+   the semantics of "throw".
+
 {{{ Previous Versions
 
 Changes since 2.0.6
